--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "bindings": "^1.2.1",
-    "libjpeg": "^3.0.0",
-    "nan": "^2.0.0",
-    "node-pre-gyp": "0.6.x"
+    "nan": "^2.0.0"
   },
   "devDependencies": {
     "imagesize": "^1.0.0",
