--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "version": "1.2.0",
   "description": "Cross-platform audio record/playback and video recording.",
   "repository": "tcr/node-audiovideo",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "node test/test.js"
+    "test": "grunt"
   },
   "author": "Tim Cameron Ryan <tim@technical.io>",
   "license": "MIT",
   "dependencies": {
     "bindings": "^1.2.1",
-    "libjpeg": "^3.0.0",
-    "nan": "^2.0.0",
-    "node-pre-gyp": "0.6.x"
+    "nan": "^2.0.0"
   },
   "devDependencies": {
     "imagesize": "^1.0.0",
-    "aws-sdk": "~2.0.0-rc.15"
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-nodeunit": "^0.4.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-jsbeautifier": "^0.2.10",
+    "grunt-jscs": "^2.3.0",
+    "mkdirp": "^0.5.1",
+    "sinon": "^1.14.1"
   }
 }
